--- a/Views/Transactions/DisplayTransactions.cshtml
+++ b/Views/Transactions/DisplayTransactions.cshtml
@@ -1,10 +1,10 @@
 @model IEnumerable<Labb2.Models.Transaction>
 
 @{
-    ViewData["Title"] = "Transactions";
+    ViewData["Title"] = "Transaktioner";
 }
 
-<h1>Transactions</h1>
+<h1>Transaktioner</h1>
 
 <div class="mb-3">
     <a asp-action="Edit" class="btn btn-secondary">Kategorisera transaktioner</a>
