--- a/Views/Transactions/Edit.cshtml
+++ b/Views/Transactions/Edit.cshtml
@@ -99,7 +99,7 @@
             $("form").submit(function(e) {
                 if ($(".transaction-checkbox:checked").length === 0) {
                     e.preventDefault();
-                    alert("Ops! Välj minst en transaktion att kategorisera.");
+                    alert("Ops! Du måste välja minst en transaktion att kategorisera.");
                     return false;
                 }
 
