--- a/Views/Transactions/Index.cshtml
+++ b/Views/Transactions/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Startsida";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-        @Html.ActionLink("Get transactions", "DisplayTransactions");
+    <h1 class="display-4">Välkommen</h1>
+    @Html.ActionLink("Visa transaktioner", "DisplayTransactions")
 </div>
